--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,7 @@ override.tf.json
 .terraformrc
 terraform.rc
 
+# Ignore Lockfiles
+.terraform.lock.hcl
+
 # End of https://www.toptal.com/developers/gitignore/api/terraform,helm,go
